; ModuleID = '/home/carl/AnghaBench/openpilot/phonelibs/json/src/extr_json.c_json_decode.c'
source_filename = "/home/carl/AnghaBench/openpilot/phonelibs/json/src/extr_json.c_json_decode.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32* @json_decode(i8* %0) #0 {
  %2 = alloca i32*, align 8
  %3 = alloca i8*, align 8
  %4 = alloca i8*, align 8
  %5 = alloca i32*, align 8
  store i8* %0, i8** %3, align 8
  %6 = load i8*, i8** %3, align 8
  store i8* %6, i8** %4, align 8
  %7 = call i32 @skip_space(i8** %4)
  %8 = call i32 @parse_value(i8** %4, i32** %5)
  %9 = icmp ne i32 %8, 0
  br i1 %9, label %11, label %10

10:                                               ; preds = %1
  store i32* null, i32** %2, align 8
  br label %22

11:                                               ; preds = %1
  %12 = call i32 @skip_space(i8** %4)
  %13 = load i8*, i8** %4, align 8
  %14 = load i8, i8* %13, align 1
  %15 = sext i8 %14 to i32
  %16 = icmp ne i32 %15, 0
  br i1 %16, label %17, label %20

17:                                               ; preds = %11
  %18 = load i32*, i32** %5, align 8
  %19 = call i32 @json_delete(i32* %18)
  store i32* null, i32** %2, align 8
  br label %22

20:                                               ; preds = %11
  %21 = load i32*, i32** %5, align 8
  store i32* %21, i32** %2, align 8
  br label %22

22:                                               ; preds = %20, %17, %10
  %23 = load i32*, i32** %2, align 8
  ret i32* %23
}

declare dso_local i32 @skip_space(i8**) #1

declare dso_local i32 @parse_value(i8**, i32**) #1

declare dso_local i32 @json_delete(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
